# riscv-sim

./: .clang-format  CMakeLists.txt  CmakeLists.txt  README.md
.github/workflows/: test.yml
cmake/: CompileOptions.cmake
models/cpu/: CMakeLists.txt  addrSpace.cpp  cpu.cpp  environment.cpp  registers.cpp  registers.hpp
models/cpu/includes/cpu/: addrSpace.hpp  cpu.hpp  device.hpp  environment.hpp  instruction.hpp  registers.hpp
models/cpu/instructions/: decoder.cpp  decoder.hpp  handlers.cpp  instruction.hpp
models/ram/: CMakeLists.txt  ram.cpp
models/ram/includes/ram/: ram.hpp
tests/: CMakeLists.txt  cpu_test.cpp  semihosting_test.cpp
tests/testdata/: Makefile  arithm.asm  rv32i.asm  st_ld.asm
